<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_publishing_date"
                android:title="@string/sort_by_publishing_date" />

            <item
                android:id="@+id/sort_by_author"
                android:title="@string/sort_by_author" />

            <item
                android:id="@+id/sort_by_title"
                android:title="@string/sort_by_title" />
        </menu>
    </item>


</menu>